# Agentic_ai_hackathon

./: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  streamlit.py
agents/: agent_1_idea_extractor.py  agent_2_epic_story_generator.py  agent_3_skill_matcher.py  agent_4_scheduler.py  agent_5_progress_tracker.py  agent_6_timeline_adjuster.py  agent_7_notifier.py  config.py
config/: team_metadata.py
tasks/: task_manager.py
